# S2-OOP

Final Exam/PracticalEx/: CMakeLists.txt  Observer.h  issues.txt  main.cpp  users.txt
Final Exam/PracticalEx/Issue/: issue.cpp  issue.h
Final Exam/PracticalEx/Repo/: repo.cpp  repo.h
Final Exam/PracticalEx/Service/: service.cpp  service.h
Final Exam/PracticalEx/User/: user.cpp  user.h
Final Exam/PracticalEx/UserWindo/: uWindow.cpp  uWindow.h
Final Exam/WrittenEx/: CMakeLists.txt  main.cpp
Final Exam/WrittenEx/CarList/: carlist.cpp  carlist.h
Final Exam/WrittenEx/Hospital/: hospital.cpp  hospital.h  hospitals.txt
Final Exam/WrittenEx/SaleItem/: saleitem.cpp  saleitem.h
Final Exam/WrittenEx/TemplatedStack/: TStack.h
Final Exam/WrittenEx/ToDoList/: ToDo.cpp  ToDo.h
Final Exam/WrittenEx/Written/: file2.cpp  file2.h  handrail.cpp  handrail.h  start.cpp
Final Exam/e2-911AstalusAdrian/: .gitignore  CMakeLists.txt  Observer.h  main.cpp
Final Exam/e2-911AstalusAdrian/AbstractModel/: model.cpp  model.h
Final Exam/e2-911AstalusAdrian/Buildings/: building.cpp  building.h
Final Exam/e2-911AstalusAdrian/EthnologistWindow/: eWindow.cpp  eWindow.h
Final Exam/e2-911AstalusAdrian/Ethnologists/: ethnologist.cpp  ethnologist.h
Final Exam/e2-911AstalusAdrian/Repo/: repo.cpp  repo.h
Final Exam/e2-911AstalusAdrian/Service/: service.cpp  service.h
Final Exam/e2-911AstalusAdrian/UI/: ui.cpp  ui.h
Final Exam/e3-911AstalusAdrian/: .gitignore  CMakeLists.txt  Observer.h  main.cpp
Final Exam/e3-911AstalusAdrian/Player/: player.cpp  player.h
Final Exam/e3-911AstalusAdrian/PlayerWindow/: window.cpp  window.h
Final Exam/e3-911AstalusAdrian/Repo/: repo.cpp  repo.h
Final Exam/e3-911AstalusAdrian/Service/: service.cpp  service.h
Final Exam/e3-911AstalusAdrian/TableModel/: model.cpp  model.h
Lab Tests/t1-911AstalusAdrian/: .gitignore  CMakeLists.txt  main.cpp
Lab Tests/t1-911AstalusAdrian/Gene/: gene.cpp  gene.h
Lab Tests/t1-911AstalusAdrian/Repo/: repo.cpp  repo.h
Lab Tests/t1-911AstalusAdrian/Service/: service.cpp  service.h
Lab Tests/t1-911AstalusAdrian/UI/: ui.cpp  ui.h
Lab Tests/t1-911AstalusAdrian/Validate/: validate.cpp  validate.h
Lab Tests/t2-911AstalusAdrian/: .gitignore  CMakeLists.txt  main.cpp
Lab Tests/t2-911AstalusAdrian/Exceptions/: exception.cpp  exception.h
Lab Tests/t2-911AstalusAdrian/Measurement/: Measurement.cpp  Measurement.h
Lab Tests/t2-911AstalusAdrian/Person/: person.cpp  person.h
Lab Tests/t2-911AstalusAdrian/UI/: UI.cpp  UI.h
Lab Tests/t2-911AstalusAdrian/Validation/: validation.cpp  validation.h
Lab Tests/t3-911AstalusAdrian/: .gitignore  CMakeLists.txt  main.cpp
Lab Tests/t3-911AstalusAdrian/GUI/: gui.cpp  gui.h
Lab Tests/t3-911AstalusAdrian/Repo/: repo.cpp  repo.h
Lab Tests/t3-911AstalusAdrian/Weather/: weather.cpp  weather.h
Labs/: UML_diagram_a67.mdj
Labs/a10-911AstalusAdrian/: .gitignore  CMakeLists.txt  main.cpp  textfile.txt
Labs/a10-911AstalusAdrian/AbstractModel/: abstract_model.cpp  abstract_model.h
Labs/a10-911AstalusAdrian/Delegate/: delegate.cpp  delegate.h
Labs/a10-911AstalusAdrian/Dog/: dog.cpp  dog.h
Labs/a10-911AstalusAdrian/FileRepo/: filerepo.h
Labs/a10-911AstalusAdrian/GUI/: gui.cpp  gui.h
Labs/a10-911AstalusAdrian/Service/: service.cpp  service.h  urservice.cpp  urservice.h
Labs/a10-911AstalusAdrian/UndoRedo/: command.h  repocommands.cpp  repocommands.h
Labs/a10-911AstalusAdrian/userService/: HTMLAdoption.h  userservice.cpp  userservice.h
Labs/a45-911AstalusAdrian/: .gitignore  CMakeLists.txt  main.cpp
Labs/a45-911AstalusAdrian/Dog/: dog.cpp  dog.h
Labs/a45-911AstalusAdrian/DynamicArray/: dynamic_array.cpp  dynamic_array.h
Labs/a45-911AstalusAdrian/Repository/: reopsitory.cpp  reopsitory.h
Labs/a45-911AstalusAdrian/Service/: service.cpp  service.h
Labs/a45-911AstalusAdrian/Tests/: testing.cpp  testing.h
Labs/a45-911AstalusAdrian/UI/: ui.cpp  ui.h
Labs/a45-911AstalusAdrian/Validation/: validators.cpp  validators.h
Labs/a45-911AstalusAdrian/userService/: userservice.cpp  userservice.h
Labs/a67-911AstalusAdrian/: .gitignore  CMakeLists.txt  main.cpp  textfile.txt
Labs/a67-911AstalusAdrian/Dog/: dog.cpp  dog.h
Labs/a67-911AstalusAdrian/FileRepo/: filerepo.cpp  filerepo.h
Labs/a67-911AstalusAdrian/Service/: service.cpp  service.h
Labs/a67-911AstalusAdrian/Tests/: testing.cpp
Labs/a67-911AstalusAdrian/UI/: ui.cpp  ui.h
Labs/a67-911AstalusAdrian/Validation/: validators.cpp  validators.h
Labs/a67-911AstalusAdrian/userService/: AdoptionList.h  CSVAdoption.cpp  CSVAdoption.h  HTMLAdoption.cpp  exception.cpp  userservice.cpp  userservice.h
Labs/a89-911AstalusAdrian/: .gitignore  CMakeLists.txt  main.cpp  textfile.txt
Labs/a89-911AstalusAdrian/AbstractModel/: abstract_model.cpp  abstract_model.h
Labs/a89-911AstalusAdrian/Exceptions/: exception.h
Labs/a89-911AstalusAdrian/GUI/: gui.cpp  gui.h
Labs/a89-911AstalusAdrian/Service/: service.cpp  service.h
Labs/a89-911AstalusAdrian/Validation/: validators.h
Labs/a89-911AstalusAdrian/userService/: AdoptionList.h  CSVAdoption.cpp  HTMLAdoption.cpp
